--- a/data/config.yaml
+++ b/data/config.yaml
@@ -16,6 +16,6 @@ page_title:
   "Cool"
 links:
   - link_name: Twitter
-    link: https://twitter.com/_jzhao
+    link: https://twitter.com/BNG_Bryceu
   - link_name: Github
-    link: https://github.com/jackyzha0
+    link: https://github.com/bryce96
