--- a/data/config.yaml
+++ b/data/config.yaml
@@ -15,7 +15,7 @@ description:
 page_title:
   "Cool"
 links:
-  - link_name: Twitter
+  - link_name: Test
     link: https://twitter.com/BNG_Bryceu
   - link_name: Github
-    link: https://github.com/bryce96
+    link: https://github.com/bryceu96
